Fix: Fixed the skip intro button alignment according to Jellyfin version 10.10.7

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2784,19 +2784,20 @@ div[data-role=controlgroup] a.ui-btn-active {
     color: white;
 }
 
+.skip-button-container {
+    bottom: 25%;
+}
+
 .skip-button {
     background-color: whitesmoke;
     box-shadow: var(--shadow);
-    bottom: 25%;
-    right: var(--sidePadding);
+    margin-right: var(--sidePadding);
 }
 
-/* this workaround allows the skip button get focused correctly on TVs using remote navigation*/
-/* issue: back button can no longer be focused correctly when this button is focused, 
-but that is a non-issue because users can use the back button on their remotes */
+/* this allows the skip button get focused correctly on TVs using remote navigation; needs 10.10.7*/
 .layout-tv .skip-button {
-    right: unset;
-    left: var(--sidePadding);
+    margin-right: auto;
+    margin-left: var(--sidePadding);
 }
 
 .skip-button:hover {
